--- a/frontend/src/app/products/pages/product-details/product-details.component.html
+++ b/frontend/src/app/products/pages/product-details/product-details.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<p>product-details works!</p>
+<div class="page">
+  <h1>Product details page</h1>
+</div>
 <app-footer></app-footer>
