--- a/frontend/src/app/products/pages/products/products.component.html
+++ b/frontend/src/app/products/pages/products/products.component.html
@@ -1,5 +1,17 @@
 <app-header></app-header>
 <div class="page">
-  <h1>Product page</h1>
+  <div>
+    <div class="" *ngFor="let product of products">
+      <div>
+        <img [src]="product.img" alt="">
+        <h2>nombre: {{ product.name }}</h2>
+        <p>descripcion: {{ product.description }}</p>
+        <p>precio: {{ product.price }}</p>
+        <p *ngIf="product.discount">descuento: {{ product.discount }}</p>
+        <p>categoria: {{product.category}}</p>
+        <button (click)="goToProductDetails(product.id)">Ver mas</button>
+      </div>
+    </div>
+  </div>
 </div>
 <app-footer></app-footer>
