--- a/frontend/src/app/welcome/pages/home/home.component.css
+++ b/frontend/src/app/welcome/pages/home/home.component.css
@@ -4,7 +4,6 @@
   flex-direction: column;
   gap: 2rem;
 }
-
 .icon {
   width: 100%;
   display: flex;
@@ -53,4 +52,62 @@
   .contact__map {
     max-width: 50rem;
   }
+}
+
+/* Productos */
+.box {
+  display: flex;
+  width: 100%;
+  flex-wrap: nowrap;
+  gap: 2rem;
+  overflow: hidden;
+  overflow-x: scroll;
+  padding: 2rem;
+}
+.card {
+  width: 100%;
+  min-width: 25rem;
+  max-width: 30rem;
+  background-color: var(--white);
+  border-radius: 1rem;
+  border: none;
+  overflow: hidden;
+  box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.21);
+  transition: transform 0.3s;
+}
+.card:hover {
+  transform: scale(1.02);
+}
+.card__img-box {
+  margin: auto;
+}
+.card__info {
+  padding: 1rem;
+}
+.card__title {
+  font-size: 2rem;
+  font-weight: 700;
+  text-transform: capitalize;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+}
+.card__price {
+  margin-top: 1rem;
+}
+.card__button {
+  width: 100%;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  border: solid 1px var(--dark);
+  outline: none;
+  background-color: var(--white);
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  transition: all 0.3s;
+}
+.card__button:hover {
+  background-color: var(--dark);
+  color: var(--white);
 }
