--- a/frontend/src/app/welcome/pages/home/home.component.css
+++ b/frontend/src/app/welcome/pages/home/home.component.css
@@ -93,21 +93,34 @@
   -webkit-line-clamp: 1;
   overflow: hidden;
 }
-.card__price {
+.card__price-details {
   margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-block: 1rem;
+}
+.card__price {
+  margin: 0;
+}
+.card__discount {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  border-radius: 0.5rem;
+  padding: 0 1rem;
+  background-color: var(--dark);
+  color: var(--white);
+  text-transform: uppercase;
 }
 .card__button {
   width: 100%;
   border-radius: 0.5rem;
   padding: 0.5rem;
-  border: solid 1px var(--dark);
   outline: none;
-  background-color: var(--white);
-  font-size: 1.4rem;
-  text-transform: uppercase;
-  transition: all 0.3s;
-}
-.card__button:hover {
+  border: none;
   background-color: var(--dark);
   color: var(--white);
+  font-size: 1.4rem;
+  text-transform: uppercase;
 }
