--- a/frontend/src/app/welcome/pages/home/home.component.html
+++ b/frontend/src/app/welcome/pages/home/home.component.html
@@ -30,7 +30,10 @@
         </div>
         <div class="card__info">
           <h2 class="card__title">{{ product.name }}</h2>
-          <p class="card__price">{{ product.formattedPrice }}</p>
+          <div class="card__price-details">
+            <p class="card__price">{{ product.formattedPrice }}</p>
+            <span class="card__discount" *ngIf="product.discount">{{product.discount}}% off</span>
+          </div>
           <button class="card__button" (click)="goToProductDetails(product.id)">Ver más</button>
         </div>
       </div>
@@ -48,7 +51,10 @@
         </div>
         <div class="card__info">
           <h2 class="card__title">{{ product.name }}</h2>
-          <p class="card__price">{{ product.formattedPrice }}</p>
+          <div class="card__price-details">
+            <p class="card__price">{{ product.formattedPrice }}</p>
+            <span class="card__discount" *ngIf="product.discount">{{product.discount}}% off</span>
+          </div>
           <button class="card__button" (click)="goToProductDetails(product.id)">Ver más</button>
         </div>
       </div>
