--- a/frontend/src/app/not-found/not-found.component.html
+++ b/frontend/src/app/not-found/not-found.component.html
@@ -1,3 +1,10 @@
 <app-header></app-header>
-<p class="page">¡Ups! La página que buscas no existe</p>
+<p class="page"></p>
+
+<div class="not-found">
+    <h1>Lo sentimos, la página que estás buscando no existe.</h1>
+</div>
+
+<div class="planta"></div>
+
 <app-footer></app-footer>
