--- a/frontend/src/app/auth/pages/login/login.component.html
+++ b/frontend/src/app/auth/pages/login/login.component.html
@@ -1,121 +1,73 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login page</title>
-    <link rel="stylesheet" href="style.css" />
-    <link href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
-      crossorigin="anonymous"
-    />
-    <title>Formulario de validación</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="content">
-        <div class="logo">
-          <a href="file:///C:/Users/Asus/Desktop/Tienda/index.html"><img class="logoWhite" src="../IniciarSesion/imagenes/LogoWhite.png" alt="" /></a>
+<app-header></app-header>
+<div class="page">
+  <div class="container">
+    <div class="content">
+
+      <!-- <div class="link">
+        <div class="social-media">
+          <a href="https://es-la.facebook.com/" target="_blank" class="social-media-icon">
+            <i class='bx bxl-facebook'></i>
+          </a>
+          <a href="https://twitter.com" target="_blank" class="social-media-icon">
+            <i class='bx bxl-twitter'></i>
+          </a>
+          <a href="https://www.instagram.com/" target="_blank" class="social-media-icon">
+            <i class='bx bxl-instagram'></i>
+          </a>
         </div>
+      </div> -->
 
-        <div class="link">
-         <div class="social-media">
-            <a href="https://es-la.facebook.com/" target="_blank" class="social-media-icon">
-              <i class='bx bxl-facebook'></i>
-            </a>
-            <a href="https://twitter.com" target="_blank" class="social-media-icon">
-              <i class='bx bxl-twitter' ></i>
-            </a>
-            <a href="https://www.instagram.com/" target="_blank" class="social-media-icon">
-              <i class='bx bxl-instagram' ></i>
-            </a>
-          </div>
-        </div>
+      <div class="image"></div>
+      <div class="text">
 
-
-
-        <div class="image"></div>
-        <div class="text">
-        
-        </div>
       </div>
-      <form id="form">
-        <div class="social">
-          <div class="title">Iniciar sesión</div>
-
-
-          <div class="btn">
-            <div class="btn-1">
-              <img
-                src="https://img.icons8.com/color/30/000000/google-logo.png"
-              />
-              Suscribirse
-            </div>
-            <div class="btn-2">
-              <img
-                src="https://img.icons8.com/ios-filled/30/ffffff/facebook-new.png"
-              />
-              Suscribirse
-            </div>
-          </div>
-
-          <div class="or">O</div>
-        </div>
-
-      
-
-        <div>
-          <label for="username">Usuario</label>
-          <i class="fas fa-user"></i>
-          <input
-            type="text"
-            name="username"
-            id="username"
-            placeholder=""
-          />
-          <i class="fas fa-exclamation-circle failure-icon"></i>
-          <i class="far fa-check-circle success-icon"></i>
-          <div class="error"></div>
-        </div>
-
-       
-        <div>
-          <label for="email">Email</label>
-          <i class="far fa-envelope"></i>
-          <input
-            type="email"
-            name="email"
-            id="email"
-            placeholder=""
-          />
-          <i class="fas fa-exclamation-circle failure-icon"></i>
-          <i class="far fa-check-circle success-icon"></i>
-          <div class="error"></div>
-        </div>
-
-        
-
-        <div>
-          <label for="password">Contraseña</label>
-          <i class="fas fa-lock"></i>
-          <input
-            type="password"
-            name="password"
-            id="password"
-            placeholder=""
-          />
-          <i class="fas fa-exclamation-circle failure-icon"></i>
-          <i class="far fa-check-circle success-icon"></i>
-          <div class="error"></div>
-        </div>
-
-        <button type="submit" id="submit">Iniciar sesión</button>
-      </form>
     </div>
-  </body>
-  <script src="main.js"></script>
-</html>
+    <form id="form">
+      <div class="social">
+        <div class="title">Iniciar sesión</div>
+
+
+        <div class="btn">
+          <div class="btn-1">
+            <img src="https://img.icons8.com/color/30/000000/google-logo.png" />
+          </div>
+          <div class="btn-2">
+            <img src="https://img.icons8.com/ios-filled/30/ffffff/facebook-new.png" />
+          </div>
+        </div>
+
+        <div class="or">O</div>
+      </div>
+
+      <div>
+        <label for="username">Usuario</label>
+        <i class="fas fa-user"></i>
+        <input type="text" name="username" id="username" placeholder="" />
+        <i class="fas fa-exclamation-circle failure-icon"></i>
+        <i class="far fa-check-circle success-icon"></i>
+        <div class="error"></div>
+      </div>
+
+      <div>
+        <label for="email">Email</label>
+        <i class="far fa-envelope"></i>
+        <input type="email" name="email" id="email" placeholder="" />
+        <i class="fas fa-exclamation-circle failure-icon"></i>
+        <i class="far fa-check-circle success-icon"></i>
+        <div class="error"></div>
+      </div>
+
+      <div>
+        <label for="password">Contraseña</label>
+        <i class="fas fa-lock"></i>
+        <input type="password" name="password" id="password" placeholder="" />
+        <i class="fas fa-exclamation-circle failure-icon"></i>
+        <i class="far fa-check-circle success-icon"></i>
+        <div class="error"></div>
+      </div>
+
+      <button type="submit" id="submit">Iniciar sesión</button>
+    </form>
+  </div>
+</div>
+<app-footer></app-footer>
