--- a/frontend/src/app/auth/pages/login/login.component.html
+++ b/frontend/src/app/auth/pages/login/login.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="content">
 
-      <!-- <div class="link">
+      <div class="link">
         <div class="social-media">
           <a href="https://es-la.facebook.com/" target="_blank" class="social-media-icon">
             <i class='bx bxl-facebook'></i>
@@ -15,7 +15,7 @@
             <i class='bx bxl-instagram'></i>
           </a>
         </div>
-      </div> -->
+      </div>
 
       <div class="image"></div>
       <div class="text">
