--- a/frontend/src/app/products/pages/product-details/product-details.component.html
+++ b/frontend/src/app/products/pages/product-details/product-details.component.html
@@ -1,12 +1,17 @@
 <app-header></app-header>
 <div class="page">
-  <div>
+  <div *ngIf="product">
     <img [src]="product.img" alt="">
     <h2>nombre: {{ product.name }}</h2>
     <p>descripcion: {{ product.description }}</p>
-    <p>precio: {{ product.formattedPrice }}</p>
-    <p *ngIf="product.discount">descuento: {{ product.discount }}</p>
+    <p *ngIf="product.discount" class="text-decoration-line-through">antes: {{ product.price|currency }}</p>
+    <p *ngIf="product.discount">precio: {{ product.discountedPrice|currency }}</p>
+    <p *ngIf="!product.discount" class="card__price">precio: {{ product.price|currency }}</p>
+    <p *ngIf="product.discount">descuento: {{ product.discount }}%</p>
     <p>categoria: {{product.category}}</p>
+  </div>
+  <div *ngIf="productNotFound">
+    <h2>{{productNotFound}}</h2>
   </div>
 </div>
 <app-footer></app-footer>
