--- a/frontend/src/app/products/pages/products/products.component.html
+++ b/frontend/src/app/products/pages/products/products.component.html
@@ -6,7 +6,8 @@
         <img [src]="product.img" alt="">
         <h2>nombre: {{ product.name }}</h2>
         <p>descripcion: {{ product.description }}</p>
-        <p>precio: {{ product.price }}</p>
+        <p *ngIf="product.discount" class="text-decoration-line-through">antes: {{ product.price|currency }}</p>
+        <p *ngIf="product.discount">precio: {{ product.discountedPrice|currency }}</p>
         <p *ngIf="product.discount">descuento: {{ product.discount }}</p>
         <p>categoria: {{product.category}}</p>
         <button (click)="goToProductDetails(product.id)">Ver mas</button>
