Modificando modal usuarios.

--- a/frontend/src/app/dashboard/page/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/page/dashboard/dashboard.component.html
@@ -182,13 +182,25 @@
         <div class="modal-body">
             
             <form>
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="nombreUsuario" 
+                       placeholder="Ingrese su nombre">
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Apellido</label>
+                <input type="text" class="form-control" id="apellidoUsuario" 
+                       placeholder="Ingrese su apellido">
+              </div>
                 <div class="mb-3">
                   <label for="exampleInputEmail1" class="form-label">Dirección Email</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <input type="email" class="form-control" id="emailUsuario"
+                         placeholder="usuario@example.com">
                 </div>
                 <div class="mb-3">
                   <label for="exampleInputPassword1" class="form-label" >Contraseña</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1">
+                  <input type="password" class="form-control" id="passwordUsuario" 
+                  placeholder="ingrese una contraseña">
                 </div>
                 <div class="mb-3 form-check">
                   <input type="checkbox" class="form-check-input" id="exampleCheck1">
