--- a/fronted/src/app/welcome/pages/about/about.component.html
+++ b/fronted/src/app/welcome/pages/about/about.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="page">
-  <h1 class="text-bold">Nosotros</h1>
+  <h1 class="text-bold">Nosotros:</h1>
   <div class="hero__img-wrapper">
     <img class="hero__img" src="assets/curvaTostado.png"  alt="">
     <p>&nbsp;</p>
@@ -8,7 +8,7 @@
 </div>
 <hr class="my-4">
 <div>
-  <h1 class="text-bold">Nuestro Capuccino</h1>
+  <h1 class="text-bold">Nuestro Capuccino:</h1>
   <div class="hero__img-wrapper">
     <img class="hero__img" src="assets/Cappuccino.png" alt="">
   </div>
@@ -18,7 +18,7 @@
 <hr class="my-4">
 
 <div>
-  <h1 class="text-bold"> Nuestro Trabajo</h1>
+  <h1 class="text-bold"> Nuestro Trabajo:</h1>
   <div class="hero__img-wrapper">
     <img class="hero__img" src="assets/cafe.jpeg" width="300" height="237" alt="">
   </div>
@@ -27,7 +27,7 @@
 </div>
 <hr class="my-4">
 <div>
-  <h1 class="text-bold">Nuestra comunidad</h1>
+  <h1 class="text-bold">Nuestra comunidad:</h1>
   <div class="hero__img-wrapper">
     <img class="hero__img" src="assets/hero.jpg" width="500" height="237" alt="">
   </div>
@@ -36,4 +36,5 @@
 </div>
 <hr class="my-4">
 </div>
+
 <app-footer></app-footer>
