cambio en estilos

--- a/frontend/src/app/not-found/not-found.component.html
+++ b/frontend/src/app/not-found/not-found.component.html
@@ -1,10 +1,14 @@
 <app-header></app-header>
-<p class="page"></p>
+<div class="page">
+  <div class="box">
 
-<div class="not-found">
-    <h1>Lo sentimos, la página que estás buscando no existe.</h1>
+    <div class="not-found">
+      <h1>Lo sentimos, la página que estás buscando no existe.</h1>
+    </div>
+
+    <div class="planta"></div>
+
+  </div>
 </div>
-
-<div class="planta"></div>
 
 <app-footer></app-footer>
