cambios en el diseño de la página registrarse

--- a/frontend/src/app/auth/pages/login/login.component.html
+++ b/frontend/src/app/auth/pages/login/login.component.html
@@ -10,7 +10,7 @@
       <div>
         <label for="email">Correo electrónico</label>
         <i class="far fa-envelope"></i>
-        <input type="email" name="email" id="email" placeholder="" />
+        <input type="email" name="email" id="email" placeholder="Ingresa tu correo electrónico" />
         <i class="fas fa-exclamation-circle failure-icon"></i>
         <i class="far fa-check-circle success-icon"></i>
         <div class="error"></div>
@@ -19,7 +19,7 @@
       <div>
         <label for="password">Contraseña</label>
         <i class="fas fa-lock"></i>
-        <input type="password" name="password" id="password" placeholder="" />
+        <input type="password" name="password" id="password" placeholder="Ingresa tu contraseña" />
         <i class="fas fa-exclamation-circle failure-icon"></i>
         <i class="far fa-check-circle success-icon"></i>
         <div class="error"></div>
