--- a/frontend/src/app/auth/pages/register/register.component.html
+++ b/frontend/src/app/auth/pages/register/register.component.html
@@ -1,40 +1,50 @@
 <app-header></app-header>
 <div class="page">
-  <h1>Register page</h1>
-  <form class="p-3 bg-dark text-white w-100 position-relative" style="max-width: 500px;">
-    <a class="position-absolute top-0 start-0 p-2 text-decoration-none link-light" href="../index.html"><i
-        class="fa-solid fa-angle-left"></i> Volver</a>
-    <img class="mb-4" src="../assets/images/Logo-white.png" alt="" width="72" height="57">
-    <h1 class="h3 mb-5 fw-normal">Crea una cuenta</h1>
+  <div class="container">
+    <div class="content">
+      <div class="image"></div>
+    </div>
+    <form id="form">
+      <div class="title">Registrarse</div>
 
-    <div class="form-floating mb-3">
-      <input type="text" class="form-control" id="name" required>
-      <label for="name">Nombre</label>
-    </div>
-    <div class="form-floating mb-3">
-      <input type="text" class="form-control" id="lastname" required>
-      <label for="lastname">Apellido</label>
-    </div>
-    <div class="form-floating mb-3">
-      <input type="email" class="form-control" id="email" required>
-      <label for="email">Email</label>
-    </div>
-    <div class="form-floating mb-3">
-      <input type="password" class="form-control" id="password" required>
-      <label for="password">Contraseña</label>
-    </div>
-    <div class="form-floating mb-3">
-      <input type="password" class="form-control" id="password2" required>
-      <label for="password2">Repetir Contraseña</label>
-    </div>
+      <div>
+        <label for="email">Correo electrónico</label>
+        <i class="far fa-envelope"></i>
+        <input type="email" name="email" id="email" placeholder="Ingresa tu correo electrónico" />
+        <i class="fas fa-exclamation-circle failure-icon"></i>
+        <i class="far fa-check-circle success-icon"></i>
+        <div class="error"></div>
+      </div>
 
-    <a href="./index.html" class="w-100">
-      <input class="form-control btn btn-lg btn-primary" type="submit" value="Registrarse">
-    </a>
-    <span class="d-block mt-3">Ya tienes una cuenta? <a class="link-primary" href="./iniciar-sesion.html">Inicia
-        sesión
-        aquí</a>
-    </span>
-  </form>
+      <div>
+        <label for="name">Nombre</label>
+        <i class="fa-solid fa-user"></i>
+        <input type="name" name="name" id="name" placeholder="Ingresa tu nombre" />
+        <i class="fas fa-exclamation-circle failure-icon"></i>
+        <i class="far fa-check-circle success-icon"></i>
+        <div class="error"></div>
+      </div>
+
+      <div>
+        <label for="last_name">Apellido</label>
+        <i class="fa-solid fa-user"></i>
+        <input type="last_name" name="last_name" id="last_name" placeholder="Ingresa tu apellido" />
+        <i class="fas fa-exclamation-circle failure-icon"></i>
+        <i class="far fa-check-circle success-icon"></i>
+        <div class="error"></div>
+      </div>
+
+      <div>
+        <label for="password">Contraseña</label>
+        <i class="fas fa-lock"></i>
+        <input type="password" name="password" id="password" placeholder="Ingresa tu contraseña" />
+        <i class="fas fa-exclamation-circle failure-icon"></i>
+        <i class="far fa-check-circle success-icon"></i>
+        <div class="error"></div>
+      </div>
+
+      <button class="btn btn-primary text-md" disabled type="submit" id="submit">Registrarse</button>
+    </form>
+  </div>
 </div>
 <app-footer></app-footer>
