--- a/frontend/src/app/auth/pages/register/register.component.html
+++ b/frontend/src/app/auth/pages/register/register.component.html
@@ -10,37 +10,50 @@
       <div>
         <label for="email">Correo electrónico</label>
         <i class="far fa-envelope"></i>
-        <input type="email" name="email" id="email" placeholder="Ingresa tu correo electrónico" />
-        <i class="fas fa-exclamation-circle failure-icon"></i>
-        <i class="far fa-check-circle success-icon"></i>
-        <div class="error"></div>
+        <input type="email" [formControl]="email" name="email" id="email" placeholder="Ingresa tu correo electrónico" />
+        <i class="fas fa-exclamation-circle failure-icon" [hidden]="email.valid || email.pristine"></i>
+        <i class="far fa-check-circle success-icon" [hidden]="!email.valid"></i>
+        <div class="error" [hidden]="email.valid || email.pristine">
+          <span *ngIf="email.errors?.['required']">El correo electrónico es obligatorio</span>
+          <span *ngIf="email.errors?.['email']">El correo electrónico no es válido</span>
+        </div>
       </div>
 
       <div>
         <label for="name">Nombre</label>
         <i class="fa-solid fa-user"></i>
-        <input type="name" name="name" id="name" placeholder="Ingresa tu nombre" />
-        <i class="fas fa-exclamation-circle failure-icon"></i>
-        <i class="far fa-check-circle success-icon"></i>
-        <div class="error"></div>
+        <input type="name" [formControl]="name" name="name" id="name" placeholder="Ingresa tu nombre" />
+        <i class="fas fa-exclamation-circle failure-icon" [hidden]="name.valid || name.pristine"></i>
+        <i class="far fa-check-circle success-icon" [hidden]="!name.valid"></i>
+        <div class="error" [hidden]="name.valid || name.pristine">
+          <span *ngIf="name.errors?.['required']">El nombre es obligatorio</span>
+        </div>
       </div>
 
       <div>
         <label for="last_name">Apellido</label>
         <i class="fa-solid fa-user"></i>
-        <input type="last_name" name="last_name" id="last_name" placeholder="Ingresa tu apellido" />
-        <i class="fas fa-exclamation-circle failure-icon"></i>
-        <i class="far fa-check-circle success-icon"></i>
-        <div class="error"></div>
+        <input type="last_name" [formControl]="last_name" name="last_name" id="last_name"
+          placeholder="Ingresa tu apellido" />
+        <i class="fas fa-exclamation-circle failure-icon" [hidden]="last_name.valid || last_name.pristine"></i>
+        <i class="far fa-check-circle success-icon" [hidden]="!last_name.valid"></i>
+        <div class="error" [hidden]="last_name.valid || last_name.pristine">
+          <span *ngIf="last_name.errors?.['required']">El apellido es obligatorio</span>
+        </div>
       </div>
 
       <div>
         <label for="password">Contraseña</label>
         <i class="fas fa-lock"></i>
-        <input type="password" name="password" id="password" placeholder="Ingresa tu contraseña" />
-        <i class="fas fa-exclamation-circle failure-icon"></i>
-        <i class="far fa-check-circle success-icon"></i>
-        <div class="error"></div>
+        <input type="password" [formControl]="password" name="password" id="password"
+          placeholder="Ingresa tu contraseña" />
+        <i class="fas fa-exclamation-circle failure-icon" [hidden]="password.valid || password.pristine"></i>
+        <i class="far fa-check-circle success-icon" [hidden]="!password.valid"></i>
+        <div class="error" [hidden]="password.valid || password.pristine">
+          <span *ngIf="password.errors?.['required']">La contraseña es obligatoria</span>
+          <span *ngIf="password.errors?.['minlength']">La contraseña debe tener entre 6 y 20 caracteres</span>
+          <span *ngIf="password.errors?.['maxlength']">La contraseña debe tener entre 6 y 20 caracteres</span>
+        </div>
       </div>
 
       <button class="btn btn-primary text-md" disabled type="submit" id="submit">Registrarse</button>
