--- a/frontend/src/app/auth/pages/register/register.component.html
+++ b/frontend/src/app/auth/pages/register/register.component.html
@@ -4,59 +4,67 @@
     <div class="content">
       <div class="image"></div>
     </div>
-    <form id="form">
+    <form id="form" [formGroup]="formLogin" (ngSubmit)="registerUser()">
       <div class="title">Registrarse</div>
 
       <div>
         <label for="email">Correo electrónico</label>
         <i class="far fa-envelope"></i>
-        <input type="email" [formControl]="email" name="email" id="email" placeholder="Ingresa tu correo electrónico" />
-        <i class="fas fa-exclamation-circle failure-icon" [hidden]="email.valid || email.pristine"></i>
-        <i class="far fa-check-circle success-icon" [hidden]="!email.valid"></i>
-        <div class="error" [hidden]="email.valid || email.pristine">
-          <span *ngIf="email.errors?.['required']">El correo electrónico es obligatorio</span>
-          <span *ngIf="email.errors?.['email']">El correo electrónico no es válido</span>
+        <input type="email" formControlName="email" name="email" id="email"
+          placeholder="Ingresa tu correo electrónico" />
+        <i class="fas fa-exclamation-circle failure-icon"
+          [hidden]="formLoginState.email.valid || formLoginState.email.pristine"></i>
+        <i class="far fa-check-circle success-icon" [hidden]="!formLoginState.email.valid"></i>
+        <div class="error" [hidden]="formLoginState.email.valid || formLoginState.email.pristine">
+          <span *ngIf="formLoginState.email.errors?.['required']">El correo electrónico es obligatorio</span>
+          <span *ngIf="formLoginState.email.errors?.['email']">El correo electrónico no es válido</span>
         </div>
       </div>
 
       <div>
         <label for="name">Nombre</label>
         <i class="fa-solid fa-user"></i>
-        <input type="name" [formControl]="name" name="name" id="name" placeholder="Ingresa tu nombre" />
-        <i class="fas fa-exclamation-circle failure-icon" [hidden]="name.valid || name.pristine"></i>
-        <i class="far fa-check-circle success-icon" [hidden]="!name.valid"></i>
-        <div class="error" [hidden]="name.valid || name.pristine">
-          <span *ngIf="name.errors?.['required']">El nombre es obligatorio</span>
+        <input type="name" formControlName="name" name="name" id="name" placeholder="Ingresa tu nombre" />
+        <i class="fas fa-exclamation-circle failure-icon"
+          [hidden]="formLoginState.name.valid || formLoginState.name.pristine"></i>
+        <i class="far fa-check-circle success-icon" [hidden]="!formLoginState.name.valid"></i>
+        <div class="error" [hidden]="formLoginState.name.valid || formLoginState.name.pristine">
+          <span *ngIf="formLoginState.name.errors?.['required']">El nombre es obligatorio</span>
         </div>
       </div>
 
       <div>
         <label for="last_name">Apellido</label>
         <i class="fa-solid fa-user"></i>
-        <input type="last_name" [formControl]="last_name" name="last_name" id="last_name"
+        <input type="last_name" formControlName="last_name" name="last_name" id="last_name"
           placeholder="Ingresa tu apellido" />
-        <i class="fas fa-exclamation-circle failure-icon" [hidden]="last_name.valid || last_name.pristine"></i>
-        <i class="far fa-check-circle success-icon" [hidden]="!last_name.valid"></i>
-        <div class="error" [hidden]="last_name.valid || last_name.pristine">
-          <span *ngIf="last_name.errors?.['required']">El apellido es obligatorio</span>
+        <i class="fas fa-exclamation-circle failure-icon"
+          [hidden]="formLoginState.last_name.valid || formLoginState.last_name.pristine"></i>
+        <i class="far fa-check-circle success-icon" [hidden]="!formLoginState.last_name.valid"></i>
+        <div class="error" [hidden]="formLoginState.last_name.valid || formLoginState.last_name.pristine">
+          <span *ngIf="formLoginState.last_name.errors?.['required']">El apellido es obligatorio</span>
         </div>
       </div>
 
       <div>
         <label for="password">Contraseña</label>
         <i class="fas fa-lock"></i>
-        <input type="password" [formControl]="password" name="password" id="password"
+        <input type="password" formControlName="password" name="password" id="password"
           placeholder="Ingresa tu contraseña" />
-        <i class="fas fa-exclamation-circle failure-icon" [hidden]="password.valid || password.pristine"></i>
-        <i class="far fa-check-circle success-icon" [hidden]="!password.valid"></i>
-        <div class="error" [hidden]="password.valid || password.pristine">
-          <span *ngIf="password.errors?.['required']">La contraseña es obligatoria</span>
-          <span *ngIf="password.errors?.['minlength']">La contraseña debe tener entre 6 y 20 caracteres</span>
-          <span *ngIf="password.errors?.['maxlength']">La contraseña debe tener entre 6 y 20 caracteres</span>
+        <i class="fas fa-exclamation-circle failure-icon"
+          [hidden]="formLoginState.password.valid || formLoginState.password.pristine"></i>
+        <i class="far fa-check-circle success-icon" [hidden]="!formLoginState.password.valid"></i>
+        <div class="error" [hidden]="formLoginState.password.valid || formLoginState.password.pristine">
+          <span *ngIf="formLoginState.password.errors?.['required']">La contraseña es obligatoria</span>
+          <span *ngIf="formLoginState.password.errors?.['minlength']">La contraseña debe tener entre 6 y 20
+            caracteres</span>
+          <span *ngIf="formLoginState.password.errors?.['maxlength']">La contraseña debe tener entre 6 y 20
+            caracteres</span>
         </div>
       </div>
 
-      <button class="btn btn-primary text-md" disabled type="submit" id="submit">Registrarse</button>
+      <button class="btn btn-primary text-md" [disabled]="formLogin.invalid" type="submit"
+        id="submit">Registrarse</button>
     </form>
   </div>
 </div>
