--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,5 @@
+@import "ngx-toastr/toastr";
+
 /* You can add global styles to this file, and also import other style files */
 :root {
   --primary: #dfab60;
