--- a/fronted/src/app/welcome/pages/about/about.component.html
+++ b/fronted/src/app/welcome/pages/about/about.component.html
@@ -3,9 +3,11 @@
   <h1 class="text-bold">Nosotros:</h1>
   <div class="hero__img-wrapper">
     <img class="hero__img" src="assets/curvaTostado.png"  alt="">
+  </div>
+    <p>&nbsp;</p>
     <p>&nbsp;</p>
   <p>Disfrutar y evolucionar el espíritu: Una persona, una taza y una amistad en puerta.</p>
-</div>
+
 <hr class="my-4">
 <div>
   <h1 class="text-bold">Nuestro Capuccino:</h1>
