--- a/frontend/src/app/shared/header/header.component.html
+++ b/frontend/src/app/shared/header/header.component.html
@@ -20,20 +20,20 @@
         <a routerLink="/cart" routerLinkActive="menu__link--active" class="menu__link">Carrito <i
             class="fa-solid fa-cart-shopping"></i></a>
       </li>
-      <li class="menu__item" [hidden]="authService.isAuthenticated">
+      <li class="menu__item" [hidden]="isAuthenticated">
         <a routerLink="/auth/login" routerLinkActive="menu__link--active" class="menu__link">Ingresar <i
             class="fa-solid fa-arrow-right-to-bracket"></i></a>
       </li>
-      <li class="menu__item" [hidden]="authService.isAuthenticated">
+      <li class="menu__item" [hidden]="isAuthenticated">
         <a routerLink="/auth/register" routerLinkActive="menu__link--active" class="menu__link">Registrarse <i
             class="fa-solid fa-user-plus"></i></a>
       </li>
-      <li class="menu__item" [hidden]="!authService.isAdmin">
+      <li class="menu__item" [hidden]="!isAdmin">
         <a routerLink="/admin" routerLinkActive="menu__link--active" class="menu__link">Admin <i
             class="fa-solid fa-chart-line"></i></a>
       </li>
-      <li class="menu__item" [hidden]="!authService.isAuthenticated">
-        <button class="btn btn-danger text-md" (click)="startLogout()">Salir <i
+      <li class="menu__item" [hidden]="!isAuthenticated">
+        <button class="btn btn-danger text-md" (click)="logout()">Salir <i
             class="fa-solid fa-right-from-bracket"></i></button>
       </li>
     </ul>
